# synchra.cli

./: README.md  pyproject.toml  synchra_x64.exe.spec  synchra_x86.exe.spec
.github/workflows/: publish.yml
synchra_cli/: __main__.py  formatter.py  main.py  observer.py
tests/: test_cli.py
tools/: build.ps1
