[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synchra.cli"
version = "0.2.4"
description = "A powerful, interactive CLI for monitoring and sending messages via the Synchra API."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bluscream", email = "pypi@minopia.de"},
    {name = "Antigravity.AI", email = "antigravity@google.com" }
]
requires-python = ">=3.9"
dependencies = [
    "synchra.py>=0.2.4"
]

[project.scripts]
synchra = "synchra_cli.main:entry_point"

[tool.setuptools.packages.find]
include = ["synchra_cli*"]

[tool.setuptools.package-data]
"*" = ["*.md"]
